--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <h3> <i class="fas fa-map-marker-alt"></i> cienfuegos</h3>
                 </div>
                 <div class="content">
-                    <div class="price">1800.00 CUP</div>
+                    <div class="price">1900.00 CUP</div>
                     <p>Reserva este atractivo paseo por la Perla del Sur y hazte una foto con la famosa estatua del Benny Moré. Transporte y almuerzo incluido.</p>
                     <a href="cienfuegos.html" class="btn">ver programa</a>
                 </div>
@@ -402,8 +402,8 @@
 
         <div class="footer-margin" >
             
-            <div class="box-container" data-aos="zoom-out-up">
-                <div class="box">
+            <div class="box-container" >
+                <div class="box" data-aos="zoom-out-up">
                 <h3>Nuestros destinos</h3>
                 <a href="#"><i class="fas fa-map-marker-alt"> </i>Trinidad</a>
                 <a href="#"><i class="fas fa-map-marker-alt"> </i>Las Terrazas</a>
@@ -411,11 +411,11 @@
                 <a href="#"><i class="fas fa-map-marker-alt"> </i>Cienfuegos</a>
                 <a href="#"><i class="fas fa-map-marker-alt"> </i>Viñales</a>
                 <a href="#"><i class="fas fa-map-marker-alt"> </i>Varadero</a>
-            </div>
+                </div>
         </div>
 
-        <div class="box-container" data-aos="zoom-out-up">
-            <div class="box">
+        <div class="box-container" >
+            <div class="box" data-aos="zoom-out-up">
                 <h3>Enlaces rápidos</h3>
                 <a href="#home"><i class="fas fa-chevron-right"> </i>Inicio</a>
                 <a href="#packages"><i class="fas fa-chevron-right"> </i>Eventos</a>
@@ -425,8 +425,8 @@
             </div>
         </div>
 
-        <div class="box-container" data-aos="zoom-out-up">
-            <div class="box" >
+        <div class="box-container">
+            <div class="box" data-aos="zoom-out-up">
                 <h3>Contacto</h3>
                 <a href="#"><i class="fas fa-map-marker-alt"></i>La Habana, Cuba </a>
                 <a href="tel:+5354073262"><i class="fas fa-phone"></i>+5354073262</a>
@@ -434,8 +434,8 @@
             </div>
         </div>
 
-        <div class="box-container" data-aos="zoom-out-up">
-            <div class="box">
+        <div class="box-container">
+            <div class="box" data-aos="zoom-out-up">
                 <h3>Siguenos</h3>
                 <a href="https://www.facebook.com/eventosdestinados"><i class="fa-brands fa-facebook-f"></i>facebook</a>
                 <a href="https://www.instagram.com/eventos_destinados/"><i class="fa-brands fa-instagram"></i>instagram </a>
