Adding reserva screen

--- a/las-terrazas.html
+++ b/las-terrazas.html
@@ -69,7 +69,7 @@
             <p><span><i class="fas fa-bus"></i></span> Ida a las 6am</p>
             <p><span><i class="fas fa-map-marked"></i></span> Entrada a la casa de Polo Montañez</p>       
             <p><span><i class="fas fa-utensils"></i></span> Almuerzo del día.</p>
-            <p><span><i class="fas fa-umbrella-beach"></i></span> Baño en el Río San Juan.</p>
+            <p><span><i class="fa-solid fa-person-swimming"></i></span> Baño en el Río San Juan.</p>
             <p><span><i class="fas fa-bus"></i></span> Regreso a las 4-5pm</p>
             <br><br><br>
             <p><span><i class="fas fa-exclamation"></i></span> Menores de 3 años cargados van gratis + almuerzo opcional a 700 cup 
