Fix checkbox popup

--- a/reserva.html
+++ b/reserva.html
@@ -242,6 +242,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
     <!-- custom js file link -->
     <script src="js/script.js"></script>
 
